added the direction and ticket button and the rocket click to launch with change of color

--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         <div class="svg-container">
             <div id="desktop-right-container">
                 <div class="top-svg-container">
-                    <object id="rocketObj" data="img/rocket.svg" type="image/svg+xml" class="svg slideBottomRight"></object>
-                    <button id="soundBtn"></button>
+                    <object id="rocketObj" data="img/rocket.svg" type="image/svg+xml" class="svg"></object>
+                    <button class="btn" id="soundBtn"></button>
                 </div>
-                <object id="bubbleObj" data="img/coldplay-bubbles.svg" type="image/svg+xml" class="svg"></object>
+                <div class="middle-svg-container">
+                    <object id="bubbleObj" data="img/coldplay-bubbles.svg" type="image/svg+xml" class="svg"></object>
+                </div>
             </div>
             <object id="coldplayObj" data="img/coldplay1.svg" type="image/svg+xml" class="svg"></object>
         </div>
